--- a/Envirovement/Envirovement/Views/TimeAndAtance/Index.cshtml
+++ b/Envirovement/Envirovement/Views/TimeAndAtance/Index.cshtml
@@ -147,7 +147,7 @@
                     <label><input type="checkbox" class="department-checkbox" value="19|დაცვის სამსახური">დაცვის სამსახური</label><br>
                     <label><input type="checkbox" class="department-checkbox" value="25|იურიდიული დეპარტამენტი">იურიდიული დეპარტამენტი</label><br>
                     <label><input type="checkbox" class="department-checkbox" value="32|შესაბამისობის, გარემოს დაცვის და შრომის უსაფრთხოების დეპარტამენტი">შესაბამისობის, გარემოს დაცვის და შრომის უსაფრთხოების დეპარტამენტი</label><br>
-                    
+                    <label><input type="checkbox" class="department-checkbox" value="66|საამქროს უფროსები">საამქროს უფროსები</label><br>
                     <!-- Add more checkboxes as needed -->
                 </div>
             </div>
@@ -176,6 +176,7 @@
                 <option value="45|ელექტრო საამქრო|ელექტრო საამქროს უფროსი">ელექტრო საამქრო</option>
                 <option value="46|მექანიკური საამქრო|მექანიკური საამქროს უფროსი">მექანიკური საამქრო</option>
                 <option value="47|ინსტრუმენტაციის და კონტროლის საამქრო|ინსტრუმენტაციის და კონტროლის საამქროს უფროსი">ინსტრუმენტაციის და კონტროლის საამქრო</option>
+                <option value="66|საამქროს უფროსები|საამქროს უფროსები">საამქროს უფროსები</option>
                 <!-- Add more departments as necessary -->
             </select>
         </div>
